--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,14 +1,10 @@
 .banner-principal-decorativo
   &-1
-    animation: float1 3.5s ease-in-out infinite alternate
+    animation: rotate 5s linear infinite
     position: absolute
-    top: 40%
-    right: 50%
-  &-2
-    animation: float1 2.8s ease-in-out infinite alternate
-    position: absolute
-    top: 51%
-    right: 30%
+    top: 5%
+    right: 5% 
+  
 
 
 @keyframes float1
@@ -17,3 +13,230 @@
 
   100%
     transform: translateY(0px)
+
+@keyframes rotate 
+  0%
+    transform: rotate(0)
+
+  100%
+    transform: rotate(360deg)
+
+.banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6
+  color: $color-sistema-texto
+
+
+.fondo-1
+  background-image: url('../assets/curso/temas/tema_1/img_1.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: left
+
+.img-a 
+  display: block 
+  margin: auto   
+  width: auto
+  height: auto
+
+.img-b
+  display: block 
+  margin: left 
+  width: auto
+  height: auto
+
+.caj_1
+  margin-left: -93px
+
+.caj_2
+  margin-left: 65px;
+
+.contenedor
+  position: relative
+  bottom: 101%
+  left: 10%
+  width: 80%
+  height: 60%
+
+.boton1
+  position: relative
+  top: 2%
+  right: -17%
+  width: 34%
+  height: 29%
+  
+
+.boton2
+  position: relative
+  top: 6%
+  left: 47%
+  width: 36%
+  height: 30%
+
+.boton3
+  position: relative
+  top: 8%
+  left: 69%
+  width: 36%
+  height: 30%
+
+.boton4
+  position: relative
+  top: 14%
+  left: 42%
+  width: 36%
+  height: 30%
+
+.boton5
+  position: relative
+  top: 20%
+  left: 15%
+  width: 36%
+  height: 30%
+
+
+.bot_1 
+    position: relative;
+    top: -465%;
+    left: 59%;
+
+.bot_2
+    position: relative;
+    top: -467%;
+    left: 82%;
+
+.bot_3
+  position: relative;
+  top: -322%;
+  left: 99%;
+
+.bot_4
+  position: relative;
+  top: -198%;
+  left: 77%;
+
+.bot_5
+  position: relative;
+  top: -90%;
+  left: 58%;
+
+
+
+.bo3
+  width: 50px !important
+
+.fondo-2
+  background-image: url('../assets/curso/temas/tema_1/img_10.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+
+.text-left
+  text-align: left
+
+@media only screen and (max-width: 992px)
+  .m-left
+    left: 0 !important  
+
+.m-left
+  left: 50% !important
+  border-bottom-right-radius: 20px
+  border-top-right-radius: 20px
+
+.bloque-texto-g
+  justify-content: flex-start !important
+  border-radius: 20px
+
+.bloque-g-text
+  justify-content: flex-end !important  
+
+.bloque-texto-f.color-secundario:before
+  background-color: #DBEDEB
+
+.bloque-texto-f__comillas i
+  color: #E26C1E
+
+.fondo-3
+  background-image: url('../assets/curso/temas/tema_1/img_21.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  text-align: left
+  margin-inline: -3.2rem 
+
+.bloque-texto-b:before 
+  top: 67%;
+  left: 46%;
+  right: 0;
+
+
+.bloque-texto-b.color-secundario:before 
+  background-color: #DBEDEB
+
+.tarjeta.color-acento-botones 
+  background-color: #DCEEEC
+
+.fondo-4
+  background-image: url('../assets/curso/temas/tema_1/img_25.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-inline: -3.2rem 
+
+.tarjeta.color-secundario 
+  background-color: #D2E1F1
+
+.tarjeta.color-secundario *
+  color: #12263F
+
+.tarjeta_1
+  border-radius: 0px !important
+
+.tarjeta_2
+  background-color: #D2E1F1 !important
+
+.tarjeta_3
+  background-color: #F9D9C4 !important
+
+.tarjeta_4
+  background-color: #CEE0A6 !important
+  p, h4
+    color: #12263F !important
+
+.cajon.color-primario 
+  background-color: #F7D7C2
+
+.cajon.color-secundario 
+  background-color: #D2E1F1
+
+.fondo-5
+  background-image: url('../assets/curso/temas/tema_2/img_2.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-inline: -3.2rem 
+
+.cajon_1
+  background-color: #D2E1F1
+  border-radius: 20px
+
+.cajon_2
+  background-color:   #E1F0EF
+
+.fondo-6
+  background-image: url('../assets/curso/temas/tema_2/img_6.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-inline: -3.2rem 
+
+.fondo-7
+  background-image: url('../assets/curso/temas/tema_3/img_8.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-inline: -3.2rem 
+
+.txt_link
+  color: #148D80
+
+.tarjeta--azul
+  background-color: #F6F6F6 !important
+
+.fig
+  background-color: transparent !important
+
+.tar_i
+  height: 100% !important
