--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,11 +54,11 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
-$color-adicional-1: #CDDC39
+$color-primario: #E26C1E
+$color-secundario: #148D80
+$color-acento-contenido: #81AD20
+$color-acento-botones: #FDA829
+$color-adicional-1: #DCEEEC
 $color-adicional-2: #00BCD4
 
 // Color Tipografias -----------------------------------
@@ -67,7 +67,7 @@ $color-headers: $color-sistema-texto
 $color-tipografia: $color-sistema-texto
 
 $color-etiqueta-fondo: $color-primario
-$color-etiqueta-texto: $white
+$color-etiqueta-texto: $color-sistema-texto
 
 //color Links ------------------------------------------
 $color-link: $color-sistema-texto
