--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -92,31 +92,67 @@
   width: 36%
   height: 30%
 
+.z_in
+  z-index: 3
 
 .bot_1 
-    position: relative;
-    top: -465%;
+  position: relative;
+  top: -578%;
+  left: 39%;
+//@media (max-width: 1400px)
+  .bot_1
+    top: -470% 
     left: 59%;
+  .bot_2
+    top: -533% !important;
+    left: 74%;
+  .bot_3
+    top: -355% !important;
+    left: 90%;
+@media (max-width: 992px)
+  top: -381px !important;
+  left: 53%;
+@media (max-width: 576px)
+  top: -432% !important;
+  left: 53%;
+
+@media (min-width: 1400px)
+  .bot_1
+    top: -520% !important;
+    left: 59%;
+  .bot_2
+    top: -533% !important;
+    left: 74%;
+  .bot_3
+    top: -355% !important;
+    left: 90% !important;
+  .bot_4
+    top: -218% !important;
+    left: 72% !important;
+  .bot_5
+    top: -100% !important;
+    left: 54% !important;
+  
 
 .bot_2
     position: relative;
-    top: -467%;
-    left: 82%;
+    top: -542%;
+    left: 67%;
 
 .bot_3
   position: relative;
-  top: -322%;
-  left: 99%;
+  top: -323%;
+  left: 97%;
 
 .bot_4
   position: relative;
-  top: -198%;
-  left: 77%;
+  top: -214%;
+  left: 64%;
 
 .bot_5
   position: relative;
-  top: -90%;
-  left: 58%;
+  top: -112%;
+  left: 39%;
 
 
 
@@ -240,3 +276,11 @@
 
 .tar_i
   height: 100% !important
+
+.titulo-sexto.color-acento-contenido
+  border-left-color: #FF6B00
+
+
+
+
+
