Se realizan correcciones a las observaciones de gestores.

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -59,7 +59,7 @@ $color-secundario: #148D80
 $color-acento-contenido: #81AD20
 $color-acento-botones: #FDA829
 $color-adicional-1: #DCEEEC
-$color-adicional-2: #00BCD4
+$color-adicional-2: #FF6B00
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
