se corrigen posiciones del texto 1.

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -95,69 +95,43 @@
 .z_in
   z-index: 3
 
-.bot_1 
-  position: relative;
-  top: -578%;
-  left: 39%;
-//@media (max-width: 1400px)
-  .bot_1
-    top: -470% 
-    left: 59%;
-  .bot_2
-    top: -533% !important;
-    left: 74%;
-  .bot_3
-    top: -355% !important;
-    left: 90%;
-@media (max-width: 992px)
-  top: -381px !important;
-  left: 53%;
-@media (max-width: 576px)
-  top: -432% !important;
-  left: 53%;
 
-@media (min-width: 1400px)
-  .bot_1
-    top: -520% !important;
-    left: 59%;
-  .bot_2
-    top: -533% !important;
-    left: 74%;
-  .bot_3
-    top: -355% !important;
-    left: 90% !important;
-  .bot_4
-    top: -218% !important;
-    left: 72% !important;
-  .bot_5
-    top: -100% !important;
-    left: 54% !important;
-  
+.bot_1 
+  position: relative
+  margin-top: -93% 
+  left: 26%;
+  width: 50vw;
+
 
 .bot_2
-    position: relative;
-    top: -542%;
-    left: 67%;
+  position: relative;
+  margin-top: -73% 
+  left: 39%;
+  width: 41vw;
+  
+  
 
 .bot_3
   position: relative;
-  top: -323%;
-  left: 97%;
+  margin-top: -57% 
+  left: 49%;
+  width: 35vw;
 
 .bot_4
   position: relative;
-  top: -214%;
-  left: 64%;
+  margin-top: -38% 
+  left: 37%;
+  width: 42vw;
 
 .bot_5
   position: relative;
-  top: -112%;
-  left: 39%;
+  margin-top: -20% 
+  left: 26%;
+  width: 50vw;
 
 
 
-.bo3
-  width: 50px !important
+
 
 .fondo-2
   background-image: url('../assets/curso/temas/tema_1/img_10.svg');
