Se reemplaza imagen.

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -254,6 +254,10 @@
 .titulo-sexto.color-acento-contenido
   border-left-color: #FF6B00
 
+.ind_2
+  left:26% !important
+  z-index: 3 !important
+
 
 
 
