--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -24,6 +24,8 @@
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6
   color: $color-sistema-texto
 
+.banner-principal__img
+  width: 400px !important      
 
 .fondo-1
   background-image: url('../assets/curso/temas/tema_1/img_1.svg');
@@ -212,7 +214,7 @@
   background-color: #F7D7C2
 
 .cajon.color-secundario 
-  background-color: #D2E1F1
+  background-color: #C4E2DF
 
 .fondo-5
   background-image: url('../assets/curso/temas/tema_2/img_2.svg');
@@ -221,7 +223,7 @@
   margin-inline: -3.2rem 
 
 .cajon_1
-  background-color: #D2E1F1
+  background-color: #DBEDEB
   border-radius: 20px
 
 .cajon_2
